fix(style): Atropos caused scrollbars to appear

--- a/src/routes/landing/sections/header/header.module.scss
+++ b/src/routes/landing/sections/header/header.module.scss
@@ -4,6 +4,7 @@
 
 .atropos {
   @include s.expand();
+  padding: 100px;
 
   hgroup {
     @include s.expand();
